# CT_Project

./: .gitignore  README.md  minImp.ml
MiniFun/: .ocamlformat  dune-project  makefile
MiniFun/lib/: AlgoW.ml  Ast.ml  RunTime.ml  TypeChecker.ml  dune  lexer.mll  parser.mly
MiniFun/sources/: main.fun
MiniFun/test/: dune  test.ml
MiniImp/: Makefile  MiniImp.opam  dune-project  makefile  output.ll  wrapper.c
MiniImp/lib/: Ast.ml  Cfg.ml  DataFlow.ml  Helpers.ml  Lexer.ml  Llvm.ml  Optimize.ml  Parser.ml  Runtime.ml  dune  lexer.mll  parser.mly
MiniImp/lib/manual/: Helpers.ml  Lexer.ml  Parser.ml
MiniImp/sources/: main.imp
MiniImp/test/: dune  test.ml
